welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:9: error: not found: value getColorSol
    c(i) = getColorSol()
           ^Array1:30: error: not found: value setBrosseCouleur
    setBrosseCouleur(c(i))
    ^Array1:30: error: not found: value c
    setBrosseCouleur(c(i))
                     ^