welcome.lessons.welcome.array.basics.Array1.scala.code


override def run() {
  
  var c = new Array[Color](getMondeHauteur())
  for(i<-1 to getMondeHauteur())
  {
    c(i) = getColorSol()
    avance()
  }
  for(i<-1 to getMondeLargeur()-1)
  {
    init()
    write()
  }
  
}



def paint() {
  baisseBrosse()
  leveBrosse()
}

def write() {
  for(i<-1 to getMondeHauteur())
  {
    setBrosseCouleur(c(i))
    paint()
    avance()
  }  
}

def init() {
  gauche()
  avance()
  droite()
}